# topotag

./: CMakeLists.txt  README.md
config/: topotag_detection_params.yml
include/: TopotagDetection.hpp
lib/: TopotagDetection.lib  TopotagDetectiond.lib
test/: main.cpp
test/data/: topotag_detection_params.yml
